bug fixes and minor styles

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -22,7 +22,7 @@
             <div class="mb-3">
                 <label class="form-label" for="price">Price:</label>
                 <div class="input-group">
-                    <span class="input-group-text" id="price-label">RM</span>
+                    <span class="input-group-text" id="price-label">&#163;</span>
                     <input type="text" class="form-control" aria-label="Price" aria-describedby="price-label"
                         name="campground[price]" placeholder="0.00" value="<%= campground.price %>" size="80" required>
                 </div>
