--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -31,8 +31,8 @@
                             <% } %>
                         </div>
                     </div>
-                    <p class="camp-location"><%= campgrounds[i].location %></p>
-                    <p class="camp-price">RM<%= campgrounds[i].price %>/night</p>
+                    <p class="camp-location"><i class="fa fa-map-marker"></i> <%= campgrounds[i].location %></p>
+                    <p class="camp-price">&#163;<%= campgrounds[i].price %>/night</p>
                     <a href="/campgrounds/<%= campgrounds[i]._id%>" class="btn btn-outline-primary">View Campground</a>
                 </div>
             </div>
@@ -56,8 +56,8 @@
                             <% } %>
                         </div>
                     </div>
-                    <p class="camp-location"><%= campgrounds[i+1].location %></p>
-                    <p class="camp-price">RM<%= campgrounds[i+1].price %>/night</p>
+                    <p class="camp-location"><i class="fa fa-map-marker"></i> <%= campgrounds[i+1].location %></p>
+                    <p class="camp-price">&#163;<%= campgrounds[i+1].price %>/night</p>
                     <a href="/campgrounds/<%= campgrounds[i+1]._id%>" class="btn btn-outline-primary">View
                         Campground</a>
                 </div>
@@ -82,8 +82,8 @@
                             <% } %>
                         </div>
                     </div>
-                    <p class="camp-location"><%= campgrounds[i+2].location %></p>
-                    <p class="camp-price">RM<%= campgrounds[i+2].price %>/night</p>
+                    <p class="camp-location"><i class="fa fa-map-marker"></i> <%= campgrounds[i+2].location %></p>
+                    <p class="camp-price">&#163;<%= campgrounds[i+2].price %>/night</p>
                     <a href="/campgrounds/<%= campgrounds[i+2]._id%>" class="btn btn-outline-primary">View
                         Campground</a>
                 </div>
@@ -112,8 +112,8 @@
                             <% } %>
                         </div>
                     </div>
-                    <p class="camp-location"><%= campgrounds[i].location %></p>
-                    <p class="camp-price">RM<%= campgrounds[i].price %>/night</p>
+                    <p class="camp-location"><i class="fa fa-map-marker"></i> <%= campgrounds[i].location %></p>
+                    <p class="camp-price">&#163;<%= campgrounds[i].price %>/night</p>
                     <a href="/campgrounds/<%= campgrounds[i]._id%>" class="btn btn-outline-primary">View
                         Campground</a>
                 </div>
