--- a/views/campgrounds/create.ejs
+++ b/views/campgrounds/create.ejs
@@ -18,7 +18,7 @@
             <div class="mb-3">
                 <label class="form-label" for="price">Price:</label>
                 <div class="input-group">
-                    <span class="input-group-text" id="price-label">RM</span>
+                    <span class="input-group-text" id="price-label">&#163;</span>
                     <input type="text" class="form-control" aria-label="Price" aria-describedby="price-label"
                         name="campground[price]" placeholder="0.00" size="80" required>
                     <div class="valid-feedback">Looks good!</div>
