--- a/views/campgrounds/details.ejs
+++ b/views/campgrounds/details.ejs
@@ -57,8 +57,8 @@
                 <small><i>Campground Author: <%= campground.author.username %></i></small>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Location: <%= campground.location %></li>
-                <li class="list-group-item">Price: RM<%= campground.price %>/night</li>
+                <li class="list-group-item"><i class="fa fa-map-marker"></i> <%= campground.location %></li>
+                <li class="list-group-item">Price: &#163;<%= campground.price %>/night</li>
             </ul>
             <div class="card-body">
                 <p class="card-text"><%= campground.description %></p>
